<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    android:outlineAmbientShadowColor="#FFC107"
    android:outlineSpotShadowColor="#CDDC39"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="404dp"
        android:layout_height="171dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="40dp">

        <TextView
            android:id="@+id/screen"
            android:layout_width="284dp"
            android:layout_height="80dp"
            android:layout_marginBottom="91dp"
            android:background="@color/greyScreen"
            android:textSize="20sp"
            android:gravity="center"
            android:lineSpacingExtra="20sp"
            android:text="1234"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableButton"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/ac"
                app:backgroundTint="@null"
                tools:layout_editor_absoluteX="13dp"
                tools:layout_editor_absoluteY="-14dp" />

            <Button
                android:id="@+id/percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/percentage"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/split"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_span="2"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/split"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/seven"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/eight"
                app:backgroundTint="@null"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/nine"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/multiply"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/four"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/five"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/six"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/substract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/subtract"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/one"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/two"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/three"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/add"
                app:backgroundTint="@null" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/zero"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/decimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/decimal"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:layout_span="2"
                android:background="@color/greyMid"
                                android:fontFamily="serif-monospace"
                android:textSize="20sp"
                android:text="@string/equal"
                app:backgroundTint="@null" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>